test/good/sets/set05.px

t = (2, ("abc", false))
print {t, t}
