test/bad/strings/format07.px

f = "{_+_}"
print f(1, "")
